k8s/service-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-lb
  namespace: flaskapp
spec:
  type: LoadBalancer
  selector:
    app: flask-app
  ports:
  - port: 80
    targetPort: 5000
