k8s/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flaskapp
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
  - port: 80
    targetPort: 5000
